--- a/index.html
+++ b/index.html
@@ -12,14 +12,16 @@
 
     <nav class="navbar navbar-expand-lg" >
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">MegaGames</a>
+          <a href="http://127.0.0.1:5500/index.html"
+          class="navbar-brand" href="#">MegaGames</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarColor01">
             <ul class="navbar-nav me-auto">
               <li class="nav-item">
-                <a class="nav-link active" href="#">Inicio
+                <a href="http://127.0.0.1:5500/index.html"
+                class="nav-link active" href="#">Inicio
                   <span class="visually-hidden">(current)</span>
                 </a>
               </li>
@@ -27,21 +29,17 @@
                 <a class="nav-link" href="#">Tienda</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Asistencia</a>
-              </li>
-              <li class="nav-item">
                 <a class="nav-link" href="#">Ofertas</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Categorias</a>
                 <div class="dropdown-menu">
-                  <a class="dropdown-item" href="#">Casuales</a>
-                  <a class="dropdown-item" href="#">Terror</a>
-                  <a class="dropdown-item" href="#">Fantasia</a>
-                  <a class="dropdown-item" href="#">Deportes</a>
-                  <a class="dropdown-item" href="#">Disparos</a>
-                  <a class="dropdown-item" href="#">Fantasia</a>
-                  <a class="dropdown-item" href="#">Cartas</a>
+                  <a href="http://127.0.0.1:5500/terror.html"
+                  class="dropdown-item" href="#">Terror</a>
+                  <a href="http://127.0.0.1:5500/shooter.html"
+                  class="dropdown-item" href="#">Shooter</a>
+                  <a href="http://127.0.0.1:5500/fantasia.html" 
+                  class="dropdown-item" href="#">Fantasia</a>
                 </div>
               </li>
             </ul>
@@ -68,13 +66,13 @@
       <div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="./assets/img/indexIMG/1.jpg" class="d-block w-100" alt="...">
+            <img src="./assets/img/indexIMG/1.jpg" class="d-block w-150" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="./assets/img/indexIMG/2.jpg" class="d-block w-100" alt="...">
+            <img src="./assets/img/indexIMG/2.jpg" class="d-block w-150" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="./assets/img/indexIMG/3.jpg" class="d-block w-100" alt="...">
+            <img src="./assets/img/indexIMG/3.jpg" class="d-block w-150" alt="...">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#myCarousel" data-bs-slide="prev">
@@ -89,7 +87,7 @@
 
       <footer class="footer">
         <div class="container">
-            <div class="row">
+            <div class="row py-5">
                 <div class="col-md-4">
                     <h5>Contacto</h5>
                     <p><i class="fas fa-map-marker-alt"></i> Dirección: Av. O'Higgins 1234,Santiago, Chile</p>
@@ -100,9 +98,8 @@
                     <h5>Enlaces Rápidos</h5>
                     <ul class="list-unstyled">
                         <li><a href="#">Inicio</a></li>
-                        <li><a href="#">Catálogo</a></li>
+                        <li><a href="#">Tienda</a></li>
                         <li><a href="#">Sobre Nosotros</a></li>
-                        <li><a href="#">Contacto</a></li>
                     </ul>
                 </div>
                 <div class="col-md-4">
